crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__numbers.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Int(
            47,
        ),
        0..4,
    ),
    (
        Int(
            10,
        ),
        5..9,
    ),
    (
        Int(
            13,
        ),
        10..16,
    ),
    (
        Int(
            0,
        ),
        17..18,
    ),
    (
        Int(
            123,
        ),
        19..22,
    ),
    (
        Int(
            1234567890,
        ),
        23..36,
    ),
    (
        Float,
        37..40,
    ),
    (
        Float,
        41..45,
    ),
    (
        Float,
        46..51,
    ),
    (
        Complex,
        52..54,
    ),
    (
        Complex,
        55..59,
    ),
    (
        Int(
            0,
        ),
        60..63,
    ),
    (
        Int(
            0x995DC9BBDF1939FA,
        ),
        64..82,
    ),
    (
        Int(
            0x995DC9BBDF1939FA995DC9BBDF1939FA,
        ),
        83..117,
    ),
    (
        Newline,
        117..117,
    ),
]
```
