crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__string_continuation_with_windows_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: string_continuation_with_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        String(
            "abc\\\r\ndef",
        ),
        0..11,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Newline,
        11..11,
    ),
]
```
