crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__triple_quoted_unix_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: triple_quoted_eol(UNIX_EOL)
---
## Tokens
```
[
    (
        String(
            "\n test string\n ",
        ),
        0..21,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING,
        ),
    ),
    (
        Newline,
        21..21,
    ),
]
```
