crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__triple_quoted_windows_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: triple_quoted_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        String(
            "\r\n test string\r\n ",
        ),
        0..23,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING,
        ),
    ),
    (
        Newline,
        23..23,
    ),
]
```
